--- a/buildspec.yml
+++ b/buildspec.yml
@@ -1,25 +1,36 @@
 version: 0.2
 
+env:
+  parameter-store:
+    DOCKER_REGISTRY_USERNAME: /myapp/docker-credentials/username
+    DOCKER_REGISTRY_PASSWORD: /myapp/docker-credentials/password
+    DOCKER_REGISTRY_URL: /myapp/docker-registry/url
+
 phases:
+  install:
+    runtime-versions:
+      python: 3.11
+    commands:
+      - echo "Installing Python dependencies..."
+      - python3 -m pip install --upgrade pip
+      - python3 -m pip install --break-system-packages -r requirements.txt  # Fix installation issue
+
   pre_build:
     commands:
-      - echo "Starting Pre-Build Phase..."
-      - echo "Logging into Docker Hub..."
-      - echo "$DOCKER_PASSWORD" | docker login -u "$DOCKER_USERNAME" --password-stdin
+      - echo "Logging in to Docker registry..."
+      - echo "$DOCKER_REGISTRY_PASSWORD" | docker login -u "$DOCKER_REGISTRY_USERNAME" --password-stdin "$DOCKER_REGISTRY_URL"
 
   build:
     commands:
-      - echo "Starting Build Phase..."
-      - echo "Building Docker Image..."
-      - docker build -t $DOCKER_USERNAME/$DOCKER_REPO_NAME:latest .
+      - echo "Building Docker image..."
+      - docker build -t "$DOCKER_REGISTRY_URL/$DOCKER_REGISTRY_USERNAME/simple-python-flask-app:latest" .
+      - echo "Pushing Docker image..."
+      - docker push "$DOCKER_REGISTRY_URL/$DOCKER_REGISTRY_USERNAME/simple-python-flask-app:latest"
 
   post_build:
     commands:
-      - echo "Starting Post-Build Phase..."
-      - echo "Pushing Docker Image to Docker Hub..."
-      - docker push $DOCKER_USERNAME/$DOCKER_REPO_NAME:latest
-      - echo "Build & Push Completed Successfully!"
+      - echo "Build and push completed successfully!"
 
 artifacts:
   files:
-    - "**/*"
+    - '**/*'
