--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,10 +14,9 @@ phases:
     - echo "Installing system dependencies..."
     - apt-get update && apt-get install -y gcc libpq-dev  
     - echo "Upgrading pip..."
-    - python3 -m ensurepip --default-pip
-    - python3 -m pip install --upgrade pip
+    - python3 -m pip install --upgrade pip setuptools wheel
     - echo "Installing Python dependencies..."
-    - python3 -m pip install --break-system-packages -r requirements.txt 
+    - pip install -r requirements.txt  # Removed --break-system-packages
 
   pre_build:
     commands:
