--- a/buildspec.yml
+++ b/buildspec.yml
@@ -12,11 +12,14 @@ phases:
       python: 3.11
     commands:
     - echo "Installing system dependencies..."
-    - apt-get update && apt-get install -y gcc libpq-dev  
+    - apt-get update && apt-get install -y gcc libpq-dev python3-venv
+    - echo "Creating virtual environment..."
+    - python3 -m venv venv
+    - source venv/bin/activate
     - echo "Upgrading pip..."
-    - python3 -m pip install --upgrade pip setuptools wheel
+    - pip install --upgrade pip setuptools wheel
     - echo "Installing Python dependencies..."
-    - pip install -r requirements.txt  # Removed --break-system-packages
+    - pip install -r requirements.txt
 
   pre_build:
     commands:
