--- a/buildspec.yml
+++ b/buildspec.yml
@@ -16,7 +16,7 @@ phases:
     - echo "Creating virtual environment..."
     - python3 -m venv venv
     - echo "Activating virtual environment..."
-    - . venv/bin/activate  # Using dot (.) instead of source
+    - . venv/bin/activate  
     - echo "Upgrading pip..."
     - pip install --upgrade pip setuptools wheel
     - echo "Installing Python dependencies..."
